# LearningOfC

./: 1.内存申请-malloc.c  10.字符串大小写转换.c  11.结构体.c  12.结构体指针.c  13.结构体嵌套.c  14.结构体数组.c  15.结构体平台兼容写法.c  16.枚举.c  17.文件读取.c  18.文件写入.c  19.文件复制.c  2.内存申请-reallock.c  20.获取文件大小.c  21.文件加密.c  22.文件解密.c  3.栈内存申请.c  4.函数指针.c  5.字符串的两种形式.c  6.字符串长度获取两种方式.c  7.字符串转数字.c  8.字符串的比较.c  9.字符串的查找拼接包含.c  9.字符串的查找拼接包含_encrypt.c  9.字符串的查找拼接包含_temp.c  CMakeLists.txt
